updates
Realicé alguna lógica anterior que sirve para poder traer los equipos a la tabla.

Lo que debo hacer ahora, es vincular el agregado de estadisticas con los partidos activos.

También realicé un análisis general del funcionamiento, para ver si los usuarios que crean un equipo y se anotan, se ven reflejados, eso funciona.

Debo profundizar mejor en la vinculación que mencioné previamente.